--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-validar-requisitos/expansion-validar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-validar-requisitos/expansion-validar-requisitos.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Validar requisitos de inicio contrato {{ contrato.numeroContrato }} fase 1 - Preconstrucción
+      Aprobar requisitos de inicio contrato {{ contrato.numeroContrato }} fase 1 - Preconstrucción
     </h1>
     <p class="colorMainColor" style="margin-top: 1em">
       <span class="mx-2em">
@@ -161,21 +161,16 @@
                 [modules]="config"
                 (onContentChanged)="maxLength($event, 1000)"
                 [(ngModel)]="perfil['verificarObservacion']"
+                #observaciones
                 required
               >
               </quill-editor>
             </div>
-            <span
-              class="contador miles"
-              *ngIf="perfil['verificarObservacion'] !== null && perfil['verificarObservacion'].length > 0"
-            >
-              {{ 1000 - textoLimpio(perfil['verificarObservacion']) }}
+            <span class="contador miles" *ngIf="perfil['verificarObservacion'] !== null">
+              {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
             </span>
-            <span
-              class="contador miles"
-              *ngIf="perfil['verificarObservacion'] === null || perfil['verificarObservacion'].length === 0"
-            >
-              1000
+            <span class="contador miles" *ngIf="perfil['verificarObservacion'] === null">
+                1000
             </span>
             <span class="icon-incompleto">
               <img
