--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-actas/tabla-gestion-actas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-actas/tabla-gestion-actas.component.html
@@ -38,6 +38,7 @@
                 color="accent" 
                 class="btn-table"
                 *ngIf="element.estadoActaCodigo === estadoActa.revisarActa"
+                [disabled]="element.esVotoAprobado === true"
                 (click)="revisarActa( element )">
                 Revisar acta
         </button>
