--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-acta-ini-f-i-prc/ver-detalle-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-acta-ini-f-i-prc/ver-detalle-acta-ini-f-i-prc.component.html
@@ -136,7 +136,7 @@
                 </div>
                 <div *ngIf="this.tieneObservacionesBool==true">
                     <p><strong>¿Tiene observaciones al acta de inicio? : Sí</strong></p>
-                    <div [innerHtml]="this.observacionesUltimasSup"></div>
+                    <div [innerHtml]="observacionesUltimasSup"></div>
                 </div>
             </mat-card-content>
         </mat-card>
