--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion-registrados/form-contratacion-registrados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion-registrados/form-contratacion-registrados.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center mt-2em" *ngIf="contratacion !== null">
+<div class="container text-center mt-2em" *ngIf="contratacion !== undefined">
   <div class="text-right">
     <a routerLink="/procesosContractuales" mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar">
@@ -80,6 +80,7 @@
             <mat-card-content>
               <p><b>Fecha del trámite</b>: {{ contratacion?.fechaTramite | date: 'dd/MM/yyyy' }} </p>
               <p><b>Número del contrato</b>: {{ form.get( 'numeroContrato' ).value }} </p>
+              <p><b>Modalidad del contrato</b>: {{ getModalidadContrato( contratacion.contrato[0].modalidadCodigo ) }} </p>
               <p><b>Fecha de envío para firma del contratista</b>: {{ form.get( 'fechaEnvioParaFirmaContratista' ).value | date: 'dd/MM/yyyy' }} </p>
               <p><b>Fecha de firma por parte del contratista</b>: {{ form.get( 'fechaFirmaPorParteContratista' ).value | date: 'dd/MM/yyyy' }} </p>
               <p><b>Fecha de envío para la firma de la fiduciaria</b>: {{ form.get( 'fechaEnvioParaFirmaFiduciaria' ).value | date: 'dd/MM/yyyy' }} </p>
