--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
@@ -88,7 +88,7 @@
                   Ver detalle
           </button>
           <button mat-raised-button color="accent" class="btn-table"
-                  (click)="observacionesDialog( element.numeroSolicitud, element.contratacionProyecto )"
+                  (click)="observacionesDialog( element.numeroSolicitud, element.contratacionId )"
                   *ngIf=" (element.estadoSolicitudCodigo === 'Devuelto por comité técnico' && element.registroCompleto)
                           || (element.estadoSolicitudCodigo === 'Rechazado por comité técnico' && element.registroCompleto)">
                   Observaciones
