--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -389,12 +389,15 @@
                     (onContentChanged)="maxLength($event, 1000)"
                     formControlName="observacion"
                     required
+                    #observaciones
                   ></quill-editor>
                   <div class="d-flex" style="align-items: flex-end; margin-bottom: 0.6em">
                     <span class="contador miles" *ngIf="perfil.get('observacion').value !== null">
-                      {{ 1000 - textoLimpio(perfil.get('observacion').value) }}
+                      {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
                     </span>
-                    <span class="contador miles" *ngIf="perfil.get('observacion').value === null"> 1000 </span>
+                    <span class="contador miles" *ngIf="perfil.get('observacion').value === null">
+                        1000
+                    </span>
                     <span class="icon-incompleto">
                       <img
                         class="icon-incompleto--img"
@@ -544,6 +547,7 @@
                     <input
                       matInput
                       type="text"
+                      maxlength="400"
                       formControlName="rutaSoporte"
                       required
                       [class.invalid]="
@@ -592,23 +596,24 @@
           Eliminar perfil
         </button>
 
-        <mat-card
+        <section *ngIf="perfil.get('observacionSupervisor').value !== undefined">
+          <mat-card
           class="shipping-card var-main-gris"
           style="margin-top: 3em"
           *ngIf="perfil.get('observacionSupervisor').value !== null"
+          align="left"
         >
           <mat-card-header class="header-card">
             <mat-card-title class="header-card--text"> Observaciones del supervisor </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            <b style="margin-top: 0.8em">
+            <b style="margin-top: 0.8em;margin-left: 2em;">
               {{ perfil.get('fechaObservacion').value | date: 'dd/MM/yyyy' }}
             </b>
-            <p>
-              {{ textoLimpioMessage(perfil.get('observacionSupervisor').value) }}
-            </p>
+            <section [innerHTML]="perfil.get('observacionSupervisor').value" style="margin-left: 2em;"></section>
           </mat-card-content>
         </mat-card>
+        </section>
 
         <button
           mat-button
