--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-tipo-pago-gbftrec/form-tipo-pago-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-tipo-pago-gbftrec/form-tipo-pago-gbftrec.component.html
@@ -8,7 +8,7 @@
         <mat-card-content align="left">
             <p><strong>¿Valor facturado por concepto: </strong><em>$ 7.000.000</em></p>
             <div class="mt-2em">
-                <mat-card-title class="header-card--text textoGris ">
+                <mat-card-title class="header-card--text textoGris " style="padding-left: 0px;">
                     Aportante 1
                 </mat-card-title>
                 <p><strong>Tipo de aportante: </strong><em>Entidad territorial</em></p>
