--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-costo-variable-gbftrec/form-costo-variable-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-costo-variable-gbftrec/form-costo-variable-gbftrec.component.html
@@ -8,7 +8,7 @@
         <mat-card-content align="left">
             <p><strong>¿Valor facturado por concepto: </strong><em>$ 8.000.000</em></p>
             <div class="mt-2em">
-                <mat-card-title class="header-card--text textoGris ">
+                <mat-card-title class="header-card--text textoGris " style="padding-left: 0px;">
                     Aportante 1
                 </mat-card-title>
                 <p><strong>Tipo de aportante: </strong><em>Entidad territorial</em></p>
@@ -55,7 +55,7 @@
                 <p><strong>¿Cuántos descuentos se aplican sobre el concepto de pago?: </strong><em>2</em></p>
             </div>
             <div class="mt-2em">
-                <mat-card-title class="header-card--text textoGris ">
+                <mat-card-title class="header-card--text textoGris " style="padding-left: 0px;">
                     Descuento 1
                 </mat-card-title>
                 <p><strong>Tipo de descuento: </strong><em>Retefuente</em></p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="mt-2em">
-                <mat-card-title class="header-card--text textoGris ">
+                <mat-card-title class="header-card--text textoGris " style="padding-left: 0px;">
                     Descuento 2
                 </mat-card-title>
                 <p><strong>Tipo de descuento: </strong><em>Rete ICA</em></p>
@@ -138,7 +138,7 @@
                 <p><strong>¿Cuántos descuentos se aplican sobre el concepto de pago?: </strong><em>1</em></p>
             </div>
             <div class="mt-2em">
-                <mat-card-title class="header-card--text textoGris ">
+                <mat-card-title class="header-card--text textoGris " style="padding-left: 0px;">
                     Descuento 1
                 </mat-card-title>
                 <p><strong>Tipo de descuento: </strong><em>4X1.000</em></p>
