--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-validar-acta-inicio-construccion/form-validar-acta-inicio-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-validar-acta-inicio-construccion/form-validar-acta-inicio-construccion.component.html
@@ -23,10 +23,10 @@
       <p><strong>Fecha de aprobación de la garantía / póliza: </strong>{{ this.fechaAprobacionGarantiaPoliza }}</p>
       <p><strong>Objeto:</strong></p>
       <div [innerHtml]="this.objeto"></div>
-      <p><strong>Valor inicial del contrato: </strong>{{ this.valorActualContrato }}</p>
-      <p><strong>Valor actual del contrato: </strong>{{ this.valorActualContrato }}</p>
-      <p><strong>Valor fase 1 - Preconstrucción (Estudios y diseños): </strong>{{ this.valorFase1Preconstruccion }}</p>
-      <p><strong>Valor fase 2 - Construcción (Obra): </strong>{{ this.valorfase2ConstruccionObra }}</p>
+      <p><strong>Valor inicial del contrato: </strong> ${{ this.valorActualContrato }}</p>
+      <p><strong>Valor actual del contrato: </strong> ${{ this.valorActualContrato }}</p>
+      <p><strong>Valor fase 1 - Preconstrucción (Estudios y diseños): </strong>${{ this.valorFase1Preconstruccion }}</p>
+      <p><strong>Valor fase 2 - Construcción (Obra): </strong>${{ this.valorfase2ConstruccionObra }}</p>
       <div *ngIf="this.valorProponente == '1'">
         <p>
           <strong>Número de identificación del representante legal del contratista de obra: </strong
