--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/tabla-general-acta-fdos-const/tabla-general-acta-fdos-const.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/tabla-general-acta-fdos-const/tabla-general-acta-fdos-const.component.html
@@ -33,7 +33,7 @@
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" 
                                                             class="btn-table" 
-                                                            (click)="this.enviarActaParaFirma(element.contratoId)"
+                                                            (click)="this.enviarActaParaFirma(element.contratoId,element.numeroContratoObra)"
                                                             *ngIf="element.estadoActa=='Con acta generada'">
                     Enviar acta para firma
                     </button>
